// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have error 1`] = `
<div
  className="flex grow justify-evenly mt-32"
>
  <div
    className="flex items-center flex-col"
  >
    <div>
      in.header
    </div>
  </div>
  <div
    className="flex items-center flex-col"
  >
    <form
      className="w-96 flex"
      onSubmit={[Function]}
    >
      <div
        className="mb-5"
      >
        <span
          className="flex "
        />
      </div>
      <div
        className="mb-5"
      >
        <span
          className="flex "
        />
      </div>
      <div
        className="pi pi-lock mr-2"
      />
      in.submit
    </form>
  </div>
</div>
`;

exports[`should load 1`] = `
<div
  className="flex grow justify-evenly mt-32"
>
  <div
    className="flex items-center flex-col"
  >
    <div>
      in.header
    </div>
  </div>
  <div
    className="flex items-center flex-col"
  >
    <form
      className="w-96 flex"
      onSubmit={[Function]}
    >
      <div
        className="mb-5"
      >
        <span
          className="flex "
        />
      </div>
      <div
        className="mb-5"
      >
        <span
          className="flex "
        />
      </div>
      <div
        className="pi pi-spin pi-spinner mr-2"
      />
      in.submit
    </form>
  </div>
</div>
`;

exports[`should render 1`] = `
<div
  className="flex grow justify-evenly mt-32"
>
  <div
    className="flex items-center flex-col"
  >
    <div>
      in.header
    </div>
  </div>
  <div
    className="flex items-center flex-col"
  >
    <form
      className="w-96 flex"
      onSubmit={[Function]}
    >
      <div
        className="mb-5"
      >
        <span
          className="flex "
        />
      </div>
      <div
        className="mb-5"
      >
        <span
          className="flex "
        />
      </div>
      <div
        className="pi pi-lock mr-2"
      />
      in.submit
    </form>
  </div>
</div>
`;
